# planetary-ephemeris

./: BTCUSD.csv  BTCUSD_results.csv  BTCUSD_results.txt  Cargo.toml  README.md  eclipses.csv  planet_matrix_results.txt  price_planet_results.txt  retrograde_results.csv  retrograde_results.txt  ticker_dataframe.csv
SPX/: 1960_2023.csv  SPX_history.csv
dataframe/: Cargo.toml
dataframe/src/: dataframe.rs  lib.rs
ephemeris/: Cargo.toml
ephemeris/src/: alignment.rs  backtest.rs  data_type.rs  lib.rs  matrix.rs  origin.rs  query.rs  target.rs  time.rs
run/: Cargo.toml
run/src/: main.rs  queries.rs
time_series/: Cargo.toml
time_series/src/: backtest.rs  candle.rs  gauge.rs  hda.rs  lib.rs  market_structure.rs  pfs.rs  polygon_api.rs  quandl_api.rs  rapid_api.rs  square_of_nine.rs  ticker_data.rs  time.rs
toolkit/: Cargo.toml
toolkit/src/: declination.rs  eclipses.rs  ingress.rs  lib.rs  lunar_declination.rs  planet_matrix.rs  planet_self_alignment.rs  price_planet.rs  retrograde.rs
toolkit/src/eclipses/: eclipses.rs  mod.rs  signals.rs
utils/: Cargo.toml
utils/src/: alignment.rs  lib.rs  quantities.rs  query.rs  right_ascension.rs  step_size.rs  target.rs  time.rs
