[package]
name = "dataframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
toolkit = { path = "../toolkit" }
time_series = { path = "../time_series" }
ephemeris = { path = "../ephemeris" }
# external dependencies
csv = "1.1.6"
log = "0.4"
